--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import MainLayout from '@layouts/MainLayout.astro';
 import PokemonCard from '@components/pokemons/PokemonCard.astro';
 
 import type { PokemonListResponse } from '@interfaces/pokemon-list.response';
+import Title from '@components/shared/Title.astro';
 
 const response = await fetch('https://pokeapi.co/api/v2/pokemon?limit=10');
 const data = (await response.json()) as PokemonListResponse;
@@ -12,8 +13,8 @@ const title = 'Pokemon Static | Home';
 ---
 
 <MainLayout title={title}>
-  <h1 class="text-3xl text-blue-500">Pokemon List</h1>
-  <hr />
+  <Title>Pokemon List</Title>
+
   <section
     aria-label="Pokemon List"
     class="grid grid-cols-1 sm:grid-cols-3 md:grid-cols-4 gap-4"
