--- a/src/pages/pokemons/[page].astro
+++ b/src/pages/pokemons/[page].astro
@@ -4,6 +4,7 @@ import type { PokemonListResponse } from '@interfaces/pokemon-list.response';
 
 import PokemonCard from '@components/pokemons/PokemonCard.astro';
 import MainLayout from '@layouts/MainLayout.astro';
+import Title from '@components/shared/Title.astro';
 
 export const getStaticPaths = (async ({ paginate }) => {
   const response = await fetch('https://pokeapi.co/api/v2/pokemon?limit=151');
@@ -17,8 +18,7 @@ const { page } = Astro.props;
 ---
 
 <MainLayout title={title}>
-  <h1 class="text-2xl font-bold text-center">Pokemon List</h1>
-  <hr />
+  <Title>Pokemon List Paginated</Title>
 
   <section
     aria-lable="Pokemon list"
