--- a/src/pages/favorites/index.astro
+++ b/src/pages/favorites/index.astro
@@ -1,12 +1,12 @@
 ---
 import MainLayout from "@layouts/MainLayout.astro";
 import Title from "@components/shared/Title.astro";
-import { Counter } from "@components/Counter";
+import { FavoritePokemons } from "@components/pokemons/FavoritePokemons";
 
 
 ---
 
 <MainLayout title="Favorites">
     <Title>Favorites</Title>
-
+    <FavoritePokemons client:only="solid-js" />
 </MainLayout>
