Fixed the remove button that was not working

--- a/src/pages/islands/index.astro
+++ b/src/pages/islands/index.astro
@@ -6,7 +6,7 @@ import { Counter } from '@components/Counter';
 const counterValue = 0;
 ---
 
-<MainLayout title="Favorites">
+<MainLayout title="Islands">
   <!-- <Counter client:load /> -->
   <!-- Load when component is visible -->
   <Counter
