--- a/src/components/shared/Navbar.astro
+++ b/src/components/shared/Navbar.astro
@@ -46,7 +46,7 @@ const currentPath = Astro.url.pathname;
         <div>
           <a
             href={href}
-            class='text-gray-800 dark:text-gray-200 mx-1.5 sm:mx-6'
+            class='text-white dark:text-gray-200 mx-1.5 sm:mx-6'
           >
             {text}
           </a>
